--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --max-warnings=0"
   },
   "dependencies": {
+    "framer-motion": "7.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "7.6.6",
     "react-router": "6.4.3",
     "react-router-dom": "6.4.3"
   },
@@ -19,6 +20,8 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "eslint": "^8.28.0",
+    "eslint-config-react-app": "^7.0.1",
     "vite": "^3.2.3"
   }
 }
